; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_rsu.c_rsu_cam_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_rsu.c_rsu_cam_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rsu_softc = type { i32 }

@R92S_CAMWRITE = common dso_local global i32 0, align 4
@R92S_CAMCMD = common dso_local global i32 0, align 4
@R92S_CAMCMD_POLLING = common dso_local global i32 0, align 4
@R92S_CAMCMD_WRITE = common dso_local global i32 0, align 4
@R92S_CAMCMD_ADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rsu_softc*, i32, i32)* @rsu_cam_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rsu_cam_write(%struct.rsu_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.rsu_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.rsu_softc* %0, %struct.rsu_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.rsu_softc*, %struct.rsu_softc** %4, align 8
  %8 = load i32, i32* @R92S_CAMWRITE, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @rsu_write_4(%struct.rsu_softc* %7, i32 %8, i32 %9)
  %11 = load %struct.rsu_softc*, %struct.rsu_softc** %4, align 8
  %12 = load i32, i32* @R92S_CAMCMD, align 4
  %13 = load i32, i32* @R92S_CAMCMD_POLLING, align 4
  %14 = load i32, i32* @R92S_CAMCMD_WRITE, align 4
  %15 = or i32 %13, %14
  %16 = load i32, i32* @R92S_CAMCMD_ADDR, align 4
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @SM(i32 %16, i32 %17)
  %19 = or i32 %15, %18
  %20 = call i32 @rsu_write_4(%struct.rsu_softc* %11, i32 %12, i32 %19)
  ret void
}

declare dso_local i32 @rsu_write_4(%struct.rsu_softc*, i32, i32) #1

declare dso_local i32 @SM(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
